<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nrabbi.hw2.MainActivity">

    <TextView
        android:id="@+id/lblStatsHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:gravity="center_horizontal"
        android:text="@string/label_main_heading"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        android:id="@+id/btnExit"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnStartTrivia"
        android:text="@string/button_start_trivia"
        android:textAllCaps="false"
        android:enabled="false"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/trivia"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/lblStatsHeading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageTrivia"
        android:visibility="invisible"/>

    <TextView
        android:text="@string/label_loading_trivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblTriviaLoadStatus"
        android:layout_below="@+id/imageTrivia"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"/>

    <Button
        android:text="@string/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTriviaLoadStatus"
        android:layout_alignLeft="@+id/lblTriviaLoadStatus"
        android:layout_alignStart="@+id/lblTriviaLoadStatus"
        android:layout_marginTop="5dp"
        android:id="@+id/btnRetry"
        android:textAllCaps="false"
        android:visibility="invisible"/>

</RelativeLayout>
