<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_stats"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nrabbi.hw2.StatsActivity">

    <TextView
        android:text="@string/label_stats_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:id="@+id/lblStatsHeading"
        android:gravity="center_horizontal"
        android:textStyle="normal|bold"
        android:textSize="24sp"/>

    <Button
        android:text="@string/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        android:id="@+id/btnQuit"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/button_try_again"
        android:textAllCaps="false"
        android:id="@+id/btnTryAgain"/>

    <TextView
        android:text="#CC%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblStatsHeading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/lblCorrectPercent"
        android:textSize="24sp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progPercentCorrect"
        android:layout_alignTop="@+id/lblCorrectPercent"
        android:layout_toRightOf="@+id/lblCorrectPercent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:max="100"/>

    <TextView
        android:text="@string/label_not_all_correct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCorrectPercent"
        android:layout_marginTop="30dp"
        android:id="@+id/lblStatsMessage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"/>


</RelativeLayout>
