<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_trivia"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nrabbi.hw2.TriviaActivity">

    <TextView
        android:text="Q#"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/lblQuestionID"/>

    <TextView
        android:text="@string/label_time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblTimeLeft"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:layout_width="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/lblQuestionID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/imgQuestionImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="150dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lblQuestion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/radGroupChoices"
        android:layout_above="@+id/btnQuit">

    </RadioGroup>

    <Button
        android:text="@string/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnQuit"
        android:textAllCaps="false"/>

    <Button
        android:text="@string/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnNext"
        android:textAllCaps="false"/>

    <TextView
        android:text="#QUESTION_TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblQuestion"
        android:layout_below="@+id/imgQuestionImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
